quartofy 303 and improve display of "Parts" in toc

--- a/100-workflows-introduction.qmd
+++ b/100-workflows-introduction.qmd
@@ -1,5 +1,7 @@
 # Effective Workflows {#workflows-introduction}
 
+## Introduction 
+
 ```{r, results='asis', echo=FALSE}
 source("_common.R")
 status("polishing")
